...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/svcPrestitoButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/bookstack"
            android:textColor="@color/white"
            android:text="Prestito Libri"
            android:textSize="13sp" />

        <Button
            android:id="@+id/svcPrenotazioneButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
...
