<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:layout_margin="10dp"
        android:queryHint="Inserisci titolo o autore" />

    <TextView
        android:id="@+id/titoloCategorie"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CATEGORIE"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="#D5D5D5"/>


    <ListView
        android:id="@+id/mylistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>



</LinearLayout>