...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="Zona"/>
        <Spinner
            android:id="@+id/zonaSpinner"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="Biblioteca"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            />

        <Button
            android:id="@+id/cercaButtonAD"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:text="Cerca"
            android:textSize="20sp" />


    </LinearLayout>


...
