<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:padding="20dp"
        android:background="#CCCCCC">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDataId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29/11/2021"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvOrarioId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16:00 - 17:00"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/eliminaBlocco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#146DDA"
                android:text="Sblocca"
                android:textColor="@color/white"
                android:textSize="10dp"/>
        </LinearLayout>
    </LinearLayout>

        </LinearLayout>


