...
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/plus"
            android:text="Aggiungi Postazioni"
            android:textSize="13sp" />

        <Button
            android:id="@+id/modificaPostButton"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/paintbrush"
            android:text="Modifica Postazioni"
            android:textSize="13sp" />

    </LinearLayout>



...
